# yolo-clickhouse

./: Dockerfile  Makefile  README.md  pyproject.toml  query_with_times.sh  simple_query_metrics.sh  test_mcp.py  test_mcp.sh
docker/: clickhouse-config.xml
mcp_clickhouse/: __init__.py  mcp_server.py
