[project]
name = "mcp-clickhouse"
version = "0.1.4"
description = "DA MOST BRUTAL AN' SIMPLE MCP SERVER FOR CLICKHOUSE. RUN ANY SQL QUERY, GET DA RESULTS!"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
     "mcp[cli]>=1.3.0",
     "python-dotenv>=1.0.1",
     "clickhouse-connect>=0.8.0",
     "pip-system-certs>=4.0",
]

[project.scripts]
mcp-clickhouse = "mcp_clickhouse.main:main"

[project.urls]
Home = "https://github.com/ClickHouse/mcp-clickhouse"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"